--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -8,7 +8,7 @@
     background-color: #FFF; } */
 
 a {
-  color: #57a;
+  color: #abc5ca;
   text-decoration: none;
 }
 
@@ -18,6 +18,11 @@ ol,
 dl {
   font-size: 100%;
   line-height: 32px;
+  color: #3a3a3a;
+}
+p .accent {
+  font-style: italic;
+  color: #000;
 }
 
 h1,
@@ -88,15 +93,14 @@ th {
 a.logo:hover {
   font-size: 300%;
   font-weight: 700;
-  color: #2ba57c;
+  color: #e0a2a1;
   display: block;
   text-decoration: none;
   background-color: rgba(255, 255, 255, 0);
-  padding: 16px;
 }
 
 .menu {
-  color: #828282;
+  color: #a3adaf;
   font-size: 150%;
   margin: 0px;
   margin-top: 6px;
@@ -119,7 +123,7 @@ a.logo:hover {
 .social-links {
   float: right;
   font-size: 150%;
-  color: #828282;
+  color: #a3adaf;
   list-style-type: none;
 }
 
