center post text

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,17 +1,18 @@
 ---
 layout: default
 ---
-<br>
-<br>
-{% include post/title.html %}
 
-{% if page.splash_img_source %}
-<img id="splash-img" src="{{ site.baseurl }}{{ page.splash_img_source }}" alt="{{ page.splash_img_caption }}">
-{% endif %}
-
-{% if page.splash_img_caption %}
+<br />
+<br />
+{% include post/title.html %} {% if page.splash_img_source %}
+<img
+  id="splash-img"
+  src="{{ site.baseurl }}{{ page.splash_img_source }}"
+  alt="{{ page.splash_img_caption }}"
+/>
+{% endif %} {% if page.splash_img_caption %}
 <p class="text-muted caption">{{ page.splash_img_caption }}</p>
 {% endif %}
 
-<br>
-{{ content }}
+<br />
+<div class="post-reader">{{ content }}</div>
